force-app/main/default/objects/RSC_SLA__c/RSC_SLA__c.object-meta.xml
<CustomObject>
    <label>RSC_SLA</label>
    <nameField>
        <displayFormat>RSC-SLA-{0000}</displayFormat>
        <label>RSC_SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSC_SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>