force-app/main/default/objects/RSC_SLA__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>Completed By</label>
    <type>DateTime</type>
</CustomField>