force-app/main/default/objects/RSC_SLA__c/fields/Next_Notification_On__c.field-meta.xml
<CustomField>
    <fullName>Next_Notification_On__c</fullName>
    <label>Next Notification On</label>
    <type>DateTime</type>
</CustomField>