force-app/main/default/objects/RSC_SLA__c/fields/RSC_Complaint__c.field-meta.xml
<CustomField>
    <fullName>RSC_Complaint__c</fullName>
    <label>RSC Complaint</label>
    <referenceTo>RSC_Complaint__c</referenceTo>
    <relationshipLabel>RSC_SLAs</relationshipLabel>
    <relationshipName>RSC_SLAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>