force-app/main/default/objects/RSC_SLA__c/fields/SLA_Count__c.field-meta.xml
<CustomField>
    <fullName>SLA_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>SLA Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>