force-app/main/default/objects/RSC_SLA__c/validationRules/Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed</fullName>
    <active>true</active>
    <errorConditionFormula>Closed__c == true</errorConditionFormula>
    <errorMessage>Record is closed you can&apos;t edit this record</errorMessage>
</ValidationRule>