force-app/main/default/objects/RSC_SLA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completed_By__c</columns>
    <columns>Next_Notification_On__c</columns>
    <columns>SLA_Count__c</columns>
    <columns>Closed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>